--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <section class="main-body">
+        
+    </section>
 </body>
 </html>
