Page is fully designed -> body content, footer

--- a/index.html
+++ b/index.html
@@ -9,7 +9,33 @@
 </head>
 <body>
     <section class="main-body">
-        
+        <h1>Star Wars Characters</h1>
+        <!---body content-->
+        <div class="cont">
+            <div class="cbtn">
+                <button>Random Characters</button>
+            </div>
+            <div class="cdply">
+                <table>
+                    <tr>
+                        <td>Name</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Gender</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Birth Year</td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <!---footer--->
+        <footer>
+            <h4>Soorya-P &copy; 2022</h4>
+        </footer>
     </section>
 </body>
 </html>
