Working of the page is done -> using javascript the random number is selected and fetch json file from the browser swapi.dev.api based on the random number and display it successfuly on the web page.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,29 @@
         <!---body content-->
         <div class="cont">
             <div class="cbtn">
-                <button>Random Characters</button>
+                <button id="btn">Random Characters</button>
             </div>
             <div class="cdply">
                 <table>
                     <tr>
+                        <td>Char-no</td>
+                        <td>:</td>
+                        <td class="chr1"><h3 id="cnb"></h3></td>
+                    </tr>
+                    <tr>
                         <td>Name</td>
-                        <td></td>
+                        <td>:</td>
+                        <td class="chr1"><h3 id="nm"></h3></td>
                     </tr>
                     <tr>
                         <td>Gender</td>
-                        <td></td>
+                        <td>:</td>
+                        <td class="chr1"><h3 id="gd"></h3></td>
                     </tr>
                     <tr>
                         <td>Birth Year</td>
-                        <td></td>
+                        <td>:</td>
+                        <td class="chr1"><h3 id="byr"></h3></td>
                     </tr>
                 </table>
             </div>
@@ -37,5 +45,7 @@
             <h4>Soorya-P &copy; 2022</h4>
         </footer>
     </section>
+    <!---JavaScript is linked here--->
+    <script src="./script.js"></script>
 </body>
 </html>
